--- a/rubocop.yml
+++ b/rubocop.yml
@@ -65,6 +65,9 @@ Layout/SpaceBeforeBrackets: # (new in 1.7)
 Lint/AmbiguousAssignment: # (new in 1.7)
   Enabled: true
 
+Lint/DeprecatedConstants: # (new in 1.8)
+  Enabled: true
+
 Lint/DuplicateBranch: # (new in 1.3)
   Enabled: true
 
@@ -80,7 +83,13 @@ Lint/EmptyClass: # (new in 1.3)
 Lint/HeredocMethodCallPosition:
   Enabled: true
 
+Lint/LambdaWithoutLiteralBlock: # (new in 1.8)
+  Enabled: true
+
 Lint/NoReturnInBeginEndBlocks: # (new in 1.2)
+  Enabled: true
+
+Lint/RedundantDirGlobSort: # (new in 1.8)
   Enabled: true
 
 Lint/ToEnumArguments: # (new in 1.1)
@@ -159,6 +168,9 @@ Style/Documentation:
   Enabled: false
 
 Style/DocumentDynamicEvalDefinition: # (new in 1.1)
+  Enabled: true
+
+Style/EndlessMethod: # (new in 1.8)
   Enabled: true
 
 Style/GuardClause:
