--- a/rubocop.yml
+++ b/rubocop.yml
@@ -1,11 +1,26 @@
 require:
   - rubocop-performance
   - rubocop-rspec
+  - rubocop/cop/prawn_cops
 
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 2.7
   Exclude:
     - pkg/**/*
+    - "*.rb"
+
+Gemspec/DependencyVersion:
+  Enabled: true
+
+Gemspec/DeprecatedAttributeAssignment:
+  Enabled: true
+
+Gemspec/DevelopmentDependencies:
+  Enabled: true
+  EnforcedStyle: gemspec
+
+Gemspec/RequireMFA:
+  Enabled: true
 
 Layout/ArgumentAlignment:
   EnforcedStyle: with_fixed_indentation
@@ -13,8 +28,17 @@ Layout/ArgumentAlignment:
 Layout/ExtraSpacing:
   AllowForAlignment: false
 
+Layout/FirstArgumentIndentation:
+  EnforcedStyle: consistent
+
+Layout/FirstArrayElementIndentation:
+  EnforcedStyle: consistent
+
 Layout/FirstArrayElementLineBreak:
   Enabled: true
+
+Layout/FirstHashElementIndentation:
+  EnforcedStyle: consistent
 
 Layout/FirstHashElementLineBreak:
   Enabled: true
@@ -25,32 +49,43 @@ Layout/FirstMethodArgumentLineBreak:
 Layout/FirstMethodParameterLineBreak:
   Enabled: true
 
-Layout/FirstArgumentIndentation:
-  EnforcedStyle: consistent
-
-Layout/FirstArrayElementIndentation:
-  EnforcedStyle: consistent
-
-Layout/FirstHashElementIndentation:
-  EnforcedStyle: consistent
-
 Layout/HeredocArgumentClosingParenthesis:
   Enabled: true
+
+Layout/LineContinuationLeadingSpace:
+  Enabled: true
+
+Layout/LineContinuationSpacing:
+  Enabled: true
+
+Layout/LineEndStringConcatenationIndentation:
+  Enabled: true
+  EnforcedStyle: indented
+
+Layout/MultilineArrayBraceLayout:
+  EnforcedStyle: new_line
 
 Layout/MultilineAssignmentLayout:
   Enabled: true
 
+Layout/MultilineHashBraceLayout:
+  EnforcedStyle: new_line
+
 Layout/MultilineHashKeyLineBreaks:
   Enabled: true
 
-Layout/MultilineMethodArgumentLineBreaks:
-  Enabled: true
+Layout/MultilineMethodCallBraceLayout:
+  EnforcedStyle: new_line
 
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
 
+Layout/MultilineMethodDefinitionBraceLayout:
+  EnforcedStyle: new_line
+
 Layout/MultilineOperationIndentation:
   EnforcedStyle: indented
+  IndentationWidth: 2
 
 Layout/ParameterAlignment:
   EnforcedStyle: with_fixed_indentation
@@ -58,55 +93,122 @@ Layout/ParameterAlignment:
 Layout/SpaceAroundOperators:
   AllowForAlignment: false
 
-Layout/SpaceBeforeBrackets: # (new in 1.7)
+Layout/SpaceBeforeBrackets:
   Enabled: true
 
-
-Lint/AmbiguousAssignment: # (new in 1.7)
+Lint/AmbiguousAssignment:
   Enabled: true
 
-Lint/DeprecatedConstants: # (new in 1.8)
+Lint/AmbiguousOperatorPrecedence:
   Enabled: true
 
-Lint/DuplicateBranch: # (new in 1.3)
+Lint/AmbiguousRange:
   Enabled: true
 
-Lint/DuplicateRegexpCharacterClassElement: # (new in 1.1)
+Lint/ConstantOverwrittenInRescue:
   Enabled: true
 
-Lint/EmptyBlock: # (new in 1.1)
+Lint/DeprecatedConstants:
   Enabled: true
 
-Lint/EmptyClass: # (new in 1.3)
+Lint/DuplicateBranch:
+  Enabled: true
+
+Lint/DuplicateMagicComment:
+  Enabled: true
+
+Lint/DuplicateMatchPattern:
+  Enabled: true
+
+Lint/DuplicateRegexpCharacterClassElement:
+  Enabled: true
+
+Lint/EmptyBlock:
+  Enabled: true
+
+Lint/EmptyClass:
+  Enabled: true
+
+Lint/EmptyInPattern:
   Enabled: true
 
 Lint/HeredocMethodCallPosition:
   Enabled: true
 
-Lint/LambdaWithoutLiteralBlock: # (new in 1.8)
+Lint/IncompatibleIoSelectWithFiberScheduler:
   Enabled: true
 
-Lint/NoReturnInBeginEndBlocks: # (new in 1.2)
+Lint/ItWithoutArgumentsInBlock:
   Enabled: true
 
-Lint/RedundantDirGlobSort: # (new in 1.8)
+Lint/LambdaWithoutLiteralBlock:
   Enabled: true
 
-Lint/ToEnumArguments: # (new in 1.1)
+Lint/LiteralAssignmentInCondition:
   Enabled: true
 
-Lint/UnexpectedBlockArity: # (new in 1.5)
+Lint/MixedCaseRange:
   Enabled: true
 
-Lint/UnmodifiedReduceAccumulator: # (new in 1.1)
+Lint/NoReturnInBeginEndBlocks:
   Enabled: true
 
+Lint/NonAtomicFileOperation:
+  Enabled: true
+
+Lint/NumberConversion:
+  Enabled: true
+
+Lint/NumberedParameterAssignment:
+  Enabled: true
+
+Lint/OrAssignmentToConstant:
+  Enabled: true
+
+Lint/RedundantDirGlobSort:
+  Enabled: true
+
+Lint/RedundantRegexpQuantifiers:
+  Enabled: true
+
+Lint/RefinementImportMethods:
+  Enabled: true
+
+Lint/RequireRangeParentheses:
+  Enabled: true
+
+Lint/RequireRelativeSelfPath:
+  Enabled: true
+
+Lint/SafeNavigationChain:
+  Enabled: true
+
+Lint/SymbolConversion:
+  Enabled: true
+
+Lint/ToEnumArguments:
+  Enabled: true
+
+Lint/TripleQuotes:
+  Enabled: true
+
+Lint/UnexpectedBlockArity:
+  Enabled: true
+
+Lint/UnmodifiedReduceAccumulator:
+  Enabled: true
+
+Lint/UselessRescue:
+  Enabled: true
+
+Lint/UselessRuby2Keywords:
+  Enabled: true
 
 Metrics/AbcSize:
   Enabled: false
 
 Metrics/BlockLength:
-  IgnoredMethods:
+  AllowedMethods:
     - context
     - describe
     - it
@@ -114,40 +216,57 @@ Metrics/BlockLength:
 
 Metrics/ClassLength:
   Enabled: false
+
+Metrics/CollectionLiteralLength:
+  Enabled: false
+
 Metrics/CyclomaticComplexity:
   Enabled: false
+
 Metrics/MethodLength:
   Enabled: false
+
 Metrics/ModuleLength:
   Enabled: false
+
 Metrics/PerceivedComplexity:
   Enabled: false
+
+Naming/BlockForwarding:
+  Enabled: true
 
 Naming/MethodParameterName:
   MinNameLength: 3
   AllowNamesEndingInNumbers: true
   AllowedNames:
-  - id
-  - io
-  - to
-  - at
-  - x
-  - x1
-  - x2
-  - y
-  - y1
-  - y2
-  - r1
-  - r2
+    - id
+    - io
+    - to
+    - at
+    - x
+    - x1
+    - x2
+    - y
+    - y1
+    - y2
+    - r1
+    - r2
 
   ForbiddenNames: []
 
+Security/CompoundHash:
+  Enabled: true
 
-# This one doesn't work well with YARD
+Security/IoMethods:
+  Enabled: true
+
 Style/AccessorGrouping:
-  Enabled: false
+  EnforcedStyle: separated
 
-Style/ArgumentsForwarding: # (new in 1.1)
+Style/ArgumentsForwarding:
+  Enabled: true
+
+Style/ArrayIntersect:
   Enabled: true
 
 # We need to reference non-ascii characters when testing and explaining
@@ -158,25 +277,76 @@ Style/AsciiComments:
 Style/AutoResourceCleanup:
   Enabled: true
 
-Style/CollectionCompact: # (new in 1.2)
+Style/BlockDelimiters:
+  EnforcedStyle: semantic
+  AllowBracesOnProceduralOneLiners: true
+
+Style/CollectionCompact:
   Enabled: true
 
 Style/CollectionMethods:
   Enabled: true
 
-Style/Documentation:
-  Enabled: false
-
-Style/DocumentDynamicEvalDefinition: # (new in 1.1)
+Style/ComparableClamp:
   Enabled: true
 
-Style/EndlessMethod: # (new in 1.8)
+Style/ConcatArrayLiterals:
+  Enabled: true
+
+Style/DataInheritance:
+  Enabled: true
+
+Style/DirEmpty:
+  Enabled: true
+
+Style/DocumentDynamicEvalDefinition:
+  Enabled: true
+
+Style/Documentation:
+  Exclude:
+    - bench/**/*
+    - examples/**/*.rb
+    - manual/**/*.rb
+
+Style/DocumentationMethod:
+  Enabled: true
+  Exclude:
+    - bench/**/*
+    - examples/**/*.rb
+    - manual/**/*.rb
+    - spec/**/*_spec.rb
+
+Style/EmptyHeredoc:
+  Enabled: true
+
+Style/EndlessMethod:
+  Enabled: true
+
+Style/EnvHome:
+  Enabled: true
+
+Style/ExactRegexpMatch:
+  Enabled: true
+
+Style/FetchEnvVar:
+  Enabled: true
+
+Style/FileEmpty:
+  Enabled: true
+
+Style/FileRead:
+  Enabled: true
+
+Style/FileWrite:
   Enabled: true
 
 Style/GuardClause:
   Enabled: false
 
-Style/HashExcept: # (new in 1.7)
+Style/HashConversion:
+  Enabled: true
+
+Style/HashExcept:
   Enabled: true
 
 # We don't always prefer modifier statements even if they do fit on a line.
@@ -185,13 +355,68 @@ Style/IfUnlessModifier:
 Style/WhileUntilModifier:
   Enabled: false
 
+Style/IfWithBooleanLiteralBranches:
+  Enabled: true
+
 Style/ImplicitRuntimeError:
   Enabled: true
 
-Style/NegatedIfElseCondition: # (new in 1.2)
+Style/InPatternThen:
   Enabled: true
 
-Style/NilLambda: # (new in 1.3)
+Style/InvertibleUnlessCondition:
+  Enabled: true
+
+Style/MagicCommentFormat:
+  Enabled: true
+
+Style/MapCompactWithConditionalBlock:
+  Enabled: true
+
+Style/MapToHash:
+  Enabled: true
+
+Style/MapToSet:
+  Enabled: true
+
+Style/MethodCallWithArgsParentheses:
+  Enabled: true
+  AllowedMethods:
+    - raise
+    - describe
+    - to
+    - to_not
+    - eq
+    - be
+
+Style/MinMaxComparison:
+  Enabled: true
+
+Style/MultilineInPatternThen:
+  Enabled: true
+
+Style/NegatedIfElseCondition:
+  Enabled: true
+
+Style/NestedFileDirname:
+  Enabled: true
+
+Style/NilLambda:
+  Enabled: true
+
+Style/NumberedParameters:
+  Enabled: true
+
+Style/NumberedParametersLimit:
+  Enabled: true
+
+Style/ObjectThen:
+  Enabled: true
+
+Style/OpenStructUse:
+  Enabled: true
+
+Style/OperatorMethodCall:
   Enabled: true
 
 # This one would break our public API
@@ -200,83 +425,225 @@ Style/OptionalBooleanParameter:
 
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
-    '%': '()'
-    '%i': '[]'
-    '%I': '[]'
-    '%q': '()'
-    '%Q': '()'
-    '%r': '{}'
-    '%s': '()'
-    '%w': '[]'
-    '%W': '[]'
-    '%x': '()'
+    "%": "()"
+    "%i": "[]"
+    "%I": "[]"
+    "%q": "()"
+    "%Q": "()"
+    "%r": "{}"
+    "%s": "()"
+    "%w": "[]"
+    "%W": "[]"
+    "%x": "()"
 
-Style/RedundantArgument: # (new in 1.4)
+Style/QuotedSymbols:
+  Enabled: true
+
+Style/RedundantArgument:
   Enabled: false
 
+Style/RedundantArrayConstructor:
+  Enabled: true
+
+Style/RedundantConstantBase:
+  Enabled: false
+
+Style/RedundantCurrentDirectoryInPath:
+  Enabled: true
+
+Style/RedundantDoubleSplatHashBraces:
+  Enabled: true
+
+Style/RedundantEach:
+  Enabled: true
+
+Style/RedundantFilterChain:
+  Enabled: true
+
+Style/RedundantHeredocDelimiterQuotes:
+  Enabled: true
+
+Style/RedundantInitialize:
+  Enabled: true
+
+Style/RedundantLineContinuation:
+  Enabled: true
+
+Style/RedundantRegexpArgument:
+  Enabled: true
+
+Style/RedundantRegexpConstructor:
+  Enabled: true
+
+Style/RedundantSelfAssignmentBranch:
+  Enabled: true
+
+Style/RedundantStringEscape:
+  Enabled: true
+
 Style/ReturnNil:
+  Enabled: true
+
+Style/ReturnNilInPredicateMethodDefinition:
+  Enabled: true
+
+Style/SelectByRegexp:
   Enabled: true
 
 Style/Send:
   Enabled: true
 
-Style/SwapValues: # (new in 1.1)
+Style/SingleLineDoEndBlock:
   Enabled: true
 
-
-Performance/AncestorsInclude: # (new in 1.7)
+Style/StringChars:
   Enabled: true
 
-Performance/BigDecimalWithNumericArgument: # (new in 1.7)
+Style/StringMethods:
   Enabled: true
 
-Performance/BlockGivenWithExplicitBlock: # (new in 1.9)
+Style/SuperWithArgsParentheses:
   Enabled: true
+
+Style/SwapValues:
+  Enabled: true
+
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: prawn_comma
+
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: prawn_comma
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: prawn_comma
+
+Style/YAMLFileRead:
+  Enabled: true
+
+Performance/AncestorsInclude:
+  Enabled: true
+
+Performance/BigDecimalWithNumericArgument:
+  Enabled: true
+
+Performance/BlockGivenWithExplicitBlock:
+  Enabled: false
 
 Performance/CaseWhenSplat:
   Enabled: true
 
-Performance/CollectionLiteralInLoop: # (new in 1.8)
+Performance/CollectionLiteralInLoop:
   Enabled: true
 
-Performance/ConstantRegexp: # (new in 1.9)
+Performance/ConcurrentMonotonicTime:
+  Enabled: true
+
+Performance/ConstantRegexp:
   Enabled: true
 
 Performance/IoReadlines:
   Enabled: true
 
-Performance/MethodObjectAsBlock: # (new in 1.9)
+Performance/MapCompact:
   Enabled: true
 
-Performance/RedundantSortBlock: # (new in 1.7)
+Performance/MapMethodChain:
   Enabled: true
 
-Performance/RedundantStringChars: # (new in 1.7)
+Performance/MethodObjectAsBlock:
   Enabled: true
 
-Performance/ReverseFirst: # (new in 1.7)
+Performance/RedundantEqualityComparisonBlock:
   Enabled: true
 
-Performance/SortReverse: # (new in 1.7)
+Performance/RedundantSortBlock:
   Enabled: true
 
-Performance/Squeeze: # (new in 1.7)
+Performance/RedundantSplitRegexpArgument:
   Enabled: true
 
-Performance/StringInclude: # (new in 1.7)
+Performance/RedundantStringChars:
   Enabled: true
 
-Performance/Sum: # (new in 1.8)
+Performance/ReverseFirst:
   Enabled: true
 
+Performance/SortReverse:
+  Enabled: true
+
+Performance/Squeeze:
+  Enabled: true
+
+Performance/StringIdentifierArgument:
+  Enabled: true
+
+Performance/StringInclude:
+  Enabled: true
+
+Performance/Sum:
+  Enabled: true
+
+RSpec/Capybara:
+  Enabled: false
+
+Capybara:
+  Enabled: false
+
+FactoryBot:
+  Enabled: false
+
+RSpec/Rails:
+  Enabled: false
+
+RSpec/BeEmpty:
+  Enabled: true
+
+RSpec/BeEq:
+  Enabled: true
+
+RSpec/BeNil:
+  Enabled: true
+
+RSpec/ChangeByZero:
+  Enabled: true
+
+RSpec/ClassCheck:
+  Enabled: true
+
+RSpec/ContainExactly:
+  Enabled: true
 
 RSpec/DescribedClassModuleWrapping:
+  Enabled: true
+
+RSpec/DuplicatedMetadata:
+  Enabled: true
+
+RSpec/EmptyMetadata:
+  Enabled: true
+
+RSpec/Eq:
   Enabled: true
 
 RSpec/ExampleLength:
   Enabled: false
 
+RSpec/ExcessiveDocstringSpacing:
+  Enabled: true
+
+RSpec/IdenticalEqualityAssertion:
+  Enabled: true
+
+RSpec/IndexedLet:
+  Enabled: true
+
+RSpec/MatchArray:
+  Enabled: true
+
 RSpec/MessageExpectation:
+  Enabled: true
+
+RSpec/MetadataStyle:
   Enabled: true
 
 RSpec/MultipleExpectations:
@@ -285,5 +652,41 @@ RSpec/MultipleExpectations:
 RSpec/NestedGroups:
   Max: 5
 
+RSpec/NoExpectationExample:
+  Enabled: true
+
 RSpec/NotToNot:
   EnforcedStyle: to_not
+
+RSpec/PendingWithoutReason:
+  Enabled: true
+
+RSpec/ReceiveMessages:
+  Enabled: true
+
+RSpec/RedundantAround:
+  Enabled: true
+
+RSpec/RedundantPredicateMatcher:
+  Enabled: true
+
+RSpec/RemoveConst:
+  Enabled: true
+
+RSpec/SkipBlockInsideExample:
+  Enabled: true
+
+RSpec/SortMetadata:
+  Enabled: true
+
+RSpec/SpecFilePathFormat:
+  Enabled: true
+
+RSpec/SpecFilePathSuffix:
+  Enabled: true
+
+RSpec/SubjectDeclaration:
+  Enabled: true
+
+RSpec/VerifiedDoubleReference:
+  Enabled: true
