Fix RuboCop `Style/MethodCallWithArgsParentheses` offenses
- Apart from `puts` and `yield` since those look weird with parentheses.

--- a/rubocop.yml
+++ b/rubocop.yml
@@ -388,6 +388,8 @@ Style/MethodCallWithArgsParentheses:
     - to_not
     - eq
     - be
+    - puts
+    - yield
 
 Style/MinMaxComparison:
   Enabled: true
