Ignore RuboCop `Style/Documentation{,Method}` offenses
- I don't have enough expertise to document these, so I'll leave this as an exercise for the actual maintainers if they deem it necessary.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,13 @@
 inherit_from:
   - rubocop.yml
+
+Style/Documentation:
+  Exclude:
+    - lib/rubocop/**/*.rb
+    - lib/prawn/dev/**/*.rb
+
+Style/DocumentationMethod:
+  Exclude:
+    - templates/**/*.rb
+    - lib/rubocop/**/*.rb
+    - lib/prawn/dev/**/*.rb
